fix(colorarear): return z-index

--- a/components/colorarea/index.css
+++ b/components/colorarea/index.css
@@ -50,6 +50,10 @@ governing permissions and limitations under the License.
   border-radius: var(--mod-colorarea-border-radius, var(--spectrum-colorarea-border-radius));
   border: var(--mod-colorarea-border-width, var(--spectrum-colorarea-border-width)) solid var(--highcontrast-colorarea-border-color, var(--mod-colorarea-border-color, var(--spectrum-colorarea-border-color)));
 
+  &.is-focused {
+    z-index: 2;
+  }
+
   &.is-disabled {
     pointer-events: none;
     background: var(--highcontrast-colorarea-fill-color-disabled, var(--mod-colorarea-disabled-background-color, var(--spectrum-colorarea-disabled-background-color)));
